# atlas

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  _typos.toml
.claude/skills/atlas-release/: SKILL.md
.github/: CODEOWNERS  release-matrix.json
.github/workflows/: ci.yml  cla.yml  docs.yml  file-size-cap.yml  release-build.yml  release.yml  security.yml
bench/: bonsai_metal_tps.py
book/src/operations/: multi-gpu.md
crates/atlas-core/src/: config.rs
crates/atlas-kernels/: build.rs  build_codegen.rs
crates/atlas-kernels/src/: lib.rs
crates/atlas-rdma/: Cargo.toml  build.rs
crates/atlas-rdma/src/: env.rs  handshake.rs  lib.rs  railset.rs  railset_tests.rs  rdma_shim.c  verbs.rs  wire.rs
crates/atlas-rdma/tests/: env_chains.rs  handshake_reject.rs  transcript_golden.rs  verbs_probe.rs  wire_roundtrip.rs
crates/atlas-spark-bench/benches/: ssm.rs
crates/atlas-tier/: Cargo.toml
crates/atlas-tier/src/: direct_swap.rs  entropy.rs  entropy_tests.rs  hash.rs  hash_tests.rs  lib.rs  mem.rs  pio.rs  residency.rs  traits.rs
crates/atlas-tier/src/direct_swap/: mod.rs  unix.rs  windows.rs
crates/atlas-tier/tests/: direct_swap.rs  residency.rs
crates/spark-comm/src/: nccl_backend.rs
crates/spark-model/: Cargo.toml
crates/spark-model/examples/: dense_gemm_microtest.rs  fp8gemm_microtest.rs  lora_apply_microtest.rs  moe_microtest.rs  q2_0_gemv_microtest.rs  rmsnorm_vanilla_microtest.rs  w8a16_microtest.rs
crates/spark-model/src/: factory.rs  layer.rs  lib.rs  mistral_loader.rs  preflight.rs  speculative.rs  tp_shard.rs  traits.rs  vision_preprocess.rs
crates/spark-model/tests/: nllb_metal_kernels.rs
crates/spark-nllb/: Cargo.toml  README.md
crates/spark-nllb/src/: config.rs  config_tests.rs  gguf.rs  gguf_tests.rs  lib.rs  lora.rs  lora_tests.rs  ops.rs  weights.rs
crates/spark-nllb/src/model/: beam.rs  mod.rs
crates/spark-nllb/tests/: reference.rs
crates/spark-runtime/src/: buffers.rs  cuda_backend.rs  gpu.rs  metal_backend.rs  prefix_cache.rs  radix_tree.rs  weights.rs
crates/spark-server/: Cargo.toml
crates/spark-server/src/: adaptive_sampler.rs  citation.rs  citation_structured.rs  conversation_store.rs  hint_injector.rs  hint_injector_tests.rs  ids.rs  loop_detector.rs  main.rs  metrics.rs  model_resolver.rs
crates/spark-server/tests/: integration.rs
crates/spark-storage/: Cargo.toml  build.rs
crates/spark-storage/examples/: long_context_bench.rs  snapshot_paging_smoke.rs
crates/spark-storage/src/: blade_cap.rs  cascade_backend.rs  cascade_policy.rs  cuda_min.rs  expert.rs  expert_arena.rs  expert_pack.rs  expert_pack_fs.rs  expert_pack_tests.rs  expert_peer.rs  expert_tier.rs  expert_tier_rdma.rs  group.rs  high_speed_swap.rs  kv_paging.rs  layout.rs  (+10 more)
docker/gb10/: Dockerfile
docs/: DEPLOYMENT.md  GB10_DEPLOYMENT_GUIDE.md  METAL_BACKEND.md  TERNARY_BONSAI_RECEIPT.md  lora-adapter-mode-settings.md  lora-implementation-status.md
docs/adr/: 0007-tp-ep-composition.md
docs/releases/: README.md
docs/streaming-experts/: LORA-STATUS.md
jinja-templates/: deepseek_v4.jinja
scripts/: bench-bonsai-metal.sh  check-license-headers.sh  convert-safetensors-to-bf16.py  gdn_tp_golden.py  gen_lora_adapter.py  reference_deltas.py  release-notes.sh  test-bonsai-metal.sh  test-qwen36-tool-image.sh
test_data/lora-holo-tiny/: adapter_config.json  adapter_model.safetensors
tests/: gate_results.py  metal_kv_kld_compare.py  run_all_models.py  test_gate_results.py
tests/baselines/: README.md
(+527 files in other folders)
