# SPDX-License-Identifier: AGPL-3.0-only
[package]
name = "atlas-rdma"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Atlas: one-sided RDMA verbs primitive (C shim + safe Rust wrapper) — CUDA-free"
# `links` makes this the one crate that may compile rdma_shim.c (cargo hard-fails
# a second `links = "atlas_rdma_shim"`), and — the load-bearing part — lets our
# build script publish `cargo:has_verbs=1`, which direct dependents' build
# scripts read as `DEP_ATLAS_RDMA_SHIM_HAS_VERBS` to re-emit
# `cfg(atlas_rdma_verbs)` for THEIR own gated code (rustc-cfg never crosses
# crate boundaries).
links = "atlas_rdma_shim"

# HARD CONSTRAINT: this crate is the CUDA-free verbs transport the peer daemons
# AND the CUDA client tiers both build on. Its dependency budget is `anyhow`
# (+ `cc` at build time) — adding a GPU dependency or any workspace crate here
# breaks the property that keeps the peer daemons CUDA-free (the same rule
# crates/atlas-tier documents), and depending on a consumer crate would be a
# dependency cycle.
[dependencies]
anyhow = { workspace = true }

[build-dependencies]
# Compiles the one-sided RDMA C-shim (src/rdma_shim.c) — ibv_post_send /
# ibv_poll_cq are static inlines that must be called from C. Linux only.
cc = "1"

[lints]
workspace = true
