# SPDX-License-Identifier: AGPL-3.0-only
[package]
name = "spark-nllb"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

# Self-contained CPU reference runtime for NLLB-200 / M2M-100 encoder-decoder
# (seq2seq) translation. Deliberately independent of the CUDA/Metal GpuBackend
# so it builds and runs on a plain CPU host — Atlas's main engine is decoder-
# only + GPU-only, so seq2seq lives here until a GPU path is wired.
[[bin]]
name = "nllb-translate"
path = "src/bin/nllb-translate.rs"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
safetensors = "0.8"
memmap2 = "0.9"
half = "2"
rayon = "1"
tokenizers = { version = "0.23", default-features = false, features = ["onig"] }

[dev-dependencies]
# Integration tests synthesize a PEFT adapter on disk to exercise the LoRA path
# end-to-end against a real checkpoint (`tests/reference.rs`, gated on
# `NLLB_MODEL_DIR`).
safetensors = "0.8"

[lints]
workspace = true
